deployment/kuber/local/12_catalogapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web-nevashop
    app: catalogapi-web
  name: catalogapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-nevashop
      app: catalogapi-web  
      tier: backend
      track: stable      
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-nevashop
        app: catalogapi-web  
        tier: backend
        track: stable      
    spec:
      volumes:
      - name: volumelogs
        hostPath:
          path: /mnt/logs

      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Production
        - name: ConnectionStrings__DefaultConnection
          value: Host=192.168.0.33;Port=5432;Database=nscatalogapi;Username=postgres;Password=postgres
        - name: ASPNETCORE_PATHBASE
          value: /catalog       
        - name: IdentityS4Settings__Secret
          value: BDD0BF42-3652-4B3B-A5DD-715ACF1E53D3       
        - name: IdentityS4Settings__AuthorityURL
          value: "http://keycloak:8080/identity/realms/nevashop"
        - name: IdentityS4Settings__IssuerURL
          value: "https://prod.neva.loc/identity/realms/nevashop"
        image: gitlab.neva.loc:5050/shop/nevashop/catalogapi:latest
        imagePullPolicy: Always
        name: prod-catalogapi
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /logs 
            name: volumelogs        
      imagePullSecrets:
        - name: gitlab-credentials
      imagePullSecrets:
        - name: gitlab-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: catalogapi
  labels:
    app: catalogapi-web
spec:
#  type: LoadBalancer
  ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 80
  selector:
   app: catalogapi-web    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogls
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"  

spec:
  tls:
  - hosts:
#    - shop.neva.cloudns.nz
#    secretName: prod-ext-tls
    - prod.neva.loc
    secretName: prod-local-tls

  rules:
  - http:
      paths:
      - path: /catalog   
        pathType: Prefix
        backend:
          service:
            name: catalogapi
            port:
              number: 80
