deployment/kuber/local/15_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: web-nevashop
    app: frontend-web
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: web-nevashop
      app: frontend-web  
      tier: frontend
      track: stable      
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web-nevashop
        app: frontend-web  
        tier: frontend
        track: stable      
    spec:
      volumes:
      - name: volumelogs
        hostPath:
          path: /mnt/logs

      containers:
      - env:
        - name: BASE_URL
          value: prod.neva.loc
        name: frontend-container
        image: gitlab.neva.loc:5050/shop/nevashop/frontendprod:latest
        imagePullPolicy: Always
        name: prod-frontend
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /logs 
            name: volumelogs   
      imagePullSecrets:
        - name: gitlab-credentials

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend-web
spec:
#  type: LoadBalancer
  ports:
   - name: http
     protocol: TCP
     port: 80
     targetPort: 80
  selector:
   app: frontend-web    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontending
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"  

spec:
  tls:
  - hosts:
#    - shop.neva.cloudns.nz
#    secretName: prod-ext-tls
    - prod.neva.loc
    secretName: prod-local-tls

  rules:
  - http:
      paths:
      - path: /   
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
